pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/default-meshexternalservice-mesh-scoped-zone.listeners.golden.yaml
resources:
- name: kri_extsvc_default_remote-zone__ext-backend_9000
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.20.20.1
        portValue: 9000
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_extsvc_default_remote-zone__ext-backend_9000
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_extsvc_default_remote-zone__ext-backend_9000
              routes:
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_default_remote-zone__ext-backend_9000
                  timeout: 0s
          statPrefix: kri_extsvc_default_remote-zone__ext-backend_9000
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_extsvc_default_remote-zone__ext-backend_9000
    name: kri_extsvc_default_remote-zone__ext-backend_9000
    statPrefix: kri_extsvc_default_remote-zone__ext-backend_9000
    trafficDirection: OUTBOUND
